--- a/frogClicker.html
+++ b/frogClicker.html
@@ -5,7 +5,7 @@
       body {
         background-color: #4190ba;
         width: 95%;
-        margin-left: 15%;
+        margin-left: 5%;
         align-tracks: center;
         color: #192a51;
       
@@ -46,7 +46,7 @@
   </head>
   <body>
     <div class="main">
-      <img src="bg0.PNG" id="background" width="1650" alt="">
+      <img src="bg0.PNG" id="background" width="80%" alt="">
       <div class="frog transform" id="frog"><button onclick="changeBG()"><img src="frog.PNG" width="500"></button></div>
     </div>
     <p id="tracker">Hello</p>
