--- a/frogClicker.html
+++ b/frogClicker.html
@@ -8,7 +8,6 @@
         margin-left: 5%;
         align-tracks: center;
         color: #192a51;
-      
       }
       button {
         background-color: transparent;
@@ -20,10 +19,9 @@
       }
       .frog{
         position: absolute;
-        top: 40%;
-        left: 40%;
+        top: 30%;
+        left: 30%;
       }
-
       .transform {
         animation: bounce;
         animation-duration: 0.5s;
@@ -34,6 +32,7 @@
         }
         50% {
           transform: translateY(-75px);
+          filter: drop-shadow(0px 0px 50px #c1f5ff);
         }
         100% {
           transform: translateY(0px);
