--- a/frogClicker.html
+++ b/frogClicker.html
@@ -3,9 +3,10 @@
   <head>
     <style>
       body {
-        background-color: #4190ba;
-        width: 95%;
-        margin-left: 15%;
+        background-image: url("bg0.PNG");
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
         align-tracks: center;
         color: #192a51;
       }
@@ -13,8 +14,12 @@
         background-color: #192a51;
         border: #c1f5ff;
         color: #c1f5ff;
+        font-size: 40px;
+        margin: 2%;
+        border: #192a51;
+        border-width: 2px;
       }
-      .message {
+      #message {
         margin-top: 10%;
         background-color: #4190ba;
         color: #192a51;
@@ -29,7 +34,7 @@
       #txt3{
         font-size: 40px;
       }
-      main {
+      #main {
         position: relative;
         top: 0px;
       }
@@ -37,6 +42,10 @@
         position: absolute;
         top: 40%;
         left: 40%;
+      }
+      #frogButton {
+        background-color: transparent;
+        border: none;
       }
       .transform {
         animation: bounce;
@@ -49,7 +58,7 @@
         50% {
           
           transform: translateY(-75px);
-          filter: drop-shadow(0px 0px 50px #c1f5ff);
+          filter: drop-shadow(0px 0px 20px #c4ffc1);
         }
         100% {
           transform: translateY(0px);
@@ -61,9 +70,15 @@
     <title>Frog Clicker</title>
   </head>
   <body>
-    <div class="main">
+    <div id="message" style="display: block">
+      <p id="txt1">Hi Sharon!!!</p>
+      <p id="txt2">Merry (late) Christmas or Happy holidays!<br>I was so excited to pick you for secret santa!!!</p>
+      <p id="txt3">I made you a cute quick game based on your iconic frog art!<br> Its based on cookie clicker, so the more you click the cute frog the more things will show up in the background!<br>I hope you like this little game and I'm excited to see you again this year!</p>
+      <button id="messButton" onclick="changeScreen()">Click to start the game</button>
+    </div>
+    <div id="main" style="display: none">
       <img src="bg0.PNG" id="background" width="1650" alt="">
-      <div class="frog transform" id="frog"><button onclick="changeBG()"><img src="frog.PNG" width="500"></button></div>
+      <div class="frog transform" id="frog"><button onclick="changeBG()" id="frogButton"><img src="frog.PNG" width="500"></button></div>
     </div>
   </body>
 </html>
