--- a/frogClicker.html
+++ b/frogClicker.html
@@ -7,7 +7,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        width: 90%;
+        width: 85%;
         margin-left: 5%;
         margin-right: 5%;
         color: #192a51;
@@ -48,8 +48,8 @@
       }
       .frog{
         position: absolute;
-        top: 40%;
-        left: 40%;
+        top: 30%;
+        left: 30%;
       }
       #frogButton {
         background-color: transparent;
@@ -88,7 +88,7 @@
       <button id="messButton" onclick="changeScreen()">Click to start the game</button>
     </div>
     <div id="main" style="display: none">
-      <img src="bg0.PNG" id="background" width="1650" alt="">
+      <img src="bg0.PNG" id="background" width="100%" alt="">
       <div class="frog transform" id="frog"><button onclick="changeBG()" id="frogButton"><img src="frog.PNG" width="500"></button></div>
     </div>
   </body>
