--- a/frogClicker.html
+++ b/frogClicker.html
@@ -13,17 +13,18 @@
         color: #192a51;
       }
       #messButton {
-        background-color: #4190ba;
-        color: #c1f5ff;
+        background-color: #82c982;
+        color: #192a51;
         font-size: 40px;
-        margin: 2%;
-        border: #192a51;
-        border-width: 15px;
+        border-color: #ffffff;
+        border-style: solid;
+        border-width: 10px;
         border-radius: 5px;
       }
       #box{
-        background-color: #4190ba;
+        background-color: #82c982;
         margin: 5%;
+        box-shadow: 15px 15px white;
       }
       #message {
         margin-top: 10%;
@@ -36,11 +37,9 @@
       }
       #txt2{
         font-size: 50px;
-        background-color: #4190ba;
       }
       #txt3{
         font-size: 40px;
-        background-color: #4190ba;
       }
       #main {
         position: relative;
