--- a/frogClicker.html
+++ b/frogClicker.html
@@ -88,7 +88,7 @@
     </div>
     <div id="main" style="display: none">
       <img src="bg0.PNG" id="background" width="100%" alt="">
-      <div class="frog transform" id="frog"><button onclick="changeBG()" id="frogButton"><img src="frog.PNG" width="500"></button></div>
+      <div class="frog transform" id="frog"><button onclick="changeBG()" id="frogButton"><img src="frog.PNG" id="frogImg" width="500"></button></div>
     </div>
   </body>
 </html>
